[BugFix] Ne pas remonter plusieurs instances d'une idée si plusieurs participants au groupe